update: exam system code iteration
- Backend: refactor controllers, services, DTOs and mappers
- Frontend: update views, components, styles and composables
- Config: align security, routing and API layers